--- a/src/main/resources/templates/reservations.html
+++ b/src/main/resources/templates/reservations.html
@@ -13,20 +13,11 @@
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
 <link rel="stylesheet" href="css/site.css" />
 
-<!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
 <body>
-	<nav class="navbar navbar-inverse navbar-fixed-top">
-		<div class="container">
-			<div class="navbar-header">
-				<a class="navbar-brand" href="reservations">Landon Hotels -
-					Reservations</a>
-			</div>
-		</div>
-	</nav>
+
+	<div th:insert="fragments/header :: head"></div>
+
 	<div class="container">
 		<div class="page-header">
 			<h1>Welcome to the Reservations Page</h1>
@@ -53,21 +44,8 @@
 			</tr>
 		</table>
 	</div>
-	<footer class="footer navbar-inverse navbar-fixed-bottom">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-4"></div>
-				<div class="col-md-4">
-					<p class="text-muted">@Copyright 2020 Vinaykumar Dubey</p>
-				</div>
-			</div>
-		</div>
-	</footer>
 
-	<script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
-	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-	<script
-		src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script src="js/site.js"></script>
+	<div th:insert="fragments/footer :: foot"></div>
+
 </body>
 </html>
