--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -13,6 +13,7 @@
 					<ul class="nav navbar-nav">
 						<li><a href="/">Home</a></li>
 						<li><a href="reservations">Reservations</a></li>
+						<li><a href="guests">Guests</a></li>
 					</ul>
 				</div>
 			</div>
