--- a/src/main/resources/templates/guests.html
+++ b/src/main/resources/templates/guests.html
@@ -15,13 +15,29 @@
 
 </head>
 <body>
+
 	<div th:insert="fragments/header :: head"></div>
 
 	<div class="container">
 		<div class="page-header">
-			<h1>Welcome to the Home Page</h1>
+			<h1>Welcome to the Guest Page</h1>
 		</div>
-		<p> Not much... just some reservations and guest list </p>
+
+		<table class="table table-striped table-bordered">
+			<tr>
+				<td>ID</td>
+				<td>Name</td>
+				<td>Email</td>
+				<td>Phone No</td>
+			</tr>
+			<tr th:each="guest: ${guests}">
+				<td th:text="${guest.id}">Guest ID</td>
+				<td th:text="${guest.firstName}  + ', ' + ${guest.lastName} ">Guest
+					Name</td>
+				<td th:text="${guest.emailAddress}">Guest Email</td>
+				<td th:text="${guest.phoneNumber}">Guest Phone</td>
+			</tr>
+		</table>
 	</div>
 
 	<div th:insert="fragments/footer :: foot"></div>
